--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This program reads an encrypted file and redirects the response to standard output
+README
+
+This program encrypts and decrypts data using generic well known algorithms (trought libgcrypt).
 
 Requeriments:
     libgpg-error: http://www.gnupg.org/download/index.en.html#libgpg-error
@@ -12,5 +14,4 @@ Bibliography:
 
 Internet resources:
     C99 standard: http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1336.pdf
-
 
