--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 README
 
+ER Technology
 Author: Juan P Daza P
 Year: 2008
 Purpose: This program encrypts and decrypts data using generic well known algorithms (trought libgcrypt) and adds the possibility to write the manipulated data on files or standard output.
@@ -15,5 +16,5 @@ Bibliography:
     It is also important to read the examples located in the libgcrypt tests folder (see function check_one_cipher in basic.c file)
 
 Internet resources:
-    C99 standard: http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1336.pdf
+    C99 standard: http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1336.pdf (check the folder for any update of this document)
 
