--- a/README.textile
+++ b/README.textile
@@ -5,7 +5,7 @@ h1. README
 * Year: 2008
 * Purpose: This program encrypts and decrypts data using generic well known algorithms (trought libgcrypt) and adds the possibility to write the manipulated data on files or standard output.
 
-Crypter is a static library that tries to fill the gap in the libgcrypt library adding some simple byte manipulation, allowing to print the data to standard output or write it to an specified output file.  Also is posible to read data from a encrypted file and then write the plain data to another file.
+Crypter is a static library that tries to fill the gap in the libgcrypt library adding some simple byte manipulation, allowing to print the data to standard output or write it to an specified output file.  Also is posible to read data from a encrypted file and then write the plain data to another.
 
 As a static library the makefile generates a libcrypter.a file located in the libcrypter folder to easily link to other projects.
 
@@ -25,6 +25,12 @@ To build only the library:
 
  $ make libcrypter.a
 
+h2. Usage
+
+There are two executables: modalgen and modaler, the former encrypts data the latter decrypts.  Each one expects three parameters: input file, output file, key:
+
+ $ modalgen files/data.xml files/output.erc mydatakey
+
 h2. Bibliography
 
 Some documentation you must read:
@@ -37,4 +43,5 @@ h2. Internet resources
 
 Free documentation available on internet:
 * "C99 standard":http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1336.pdf (check the folder for any update of this document)
+* "An Introduction to GCC, Brian Gough":http://www.network-theory.co.uk/docs/gccintro/index.html
 
