Fixed README textile

--- a/README.textile
+++ b/README.textile
@@ -30,7 +30,8 @@ h2. Test
 There are two executables locates in the tests: modalgen and modaler, the former encrypts data the latter decrypts.  Each one expects three parameters: input file, output file, key, for example:
 
  $ ./modalgen files/data.xml files/output.erc mydatakey
-. Bibliography
+
+h2. Bibliography
 
 Some documentation you must read:
 * doc/gcrypt.pdf
