Fixed README textile

--- a/README.textile
+++ b/README.textile
@@ -42,7 +42,7 @@ Some documentation you must read:
 h2. Internet resources
 
 Free documentation available on internet:
-* The libgcrypt reference manual: http://www.fifi.org/doc/libgcrypt-doc/reference.html
+* The "libgcrypt reference manual":http://www.fifi.org/doc/libgcrypt-doc/reference.html
 * "C99 standard":http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1336.pdf (check the folder for any update of this document)
 * "An Introduction to GCC, Brian Gough":http://www.network-theory.co.uk/docs/gccintro/index.html
 * "Autotools Book":http://www.freesoftwaremagazine.com/books/autotools_a_guide_to_autoconf_automake_libtool
